tests/expectations/compiler/function/program_function_no_constant_mode_fail.out
Error [EAST0372006]: function `foo` shadowed by
    --> compiler-test:6:5
     |
   6 |     transition foo(a: u8) -> constant u8 {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   7 |         return a + a;
     |         ^^^^^^^^^^^^^
   8 |     }
     |     ^
